--- a/experiments/requirements.txt
+++ b/experiments/requirements.txt
@@ -4,12 +4,22 @@
 #
 #    pip-compile
 #
+absl-py==0.12.0
+    # via
+    #   tensorboard
+    #   tensorflow
+    #   tensorflow-datasets
+    #   tensorflow-metadata
 argon2-cffi==20.1.0
     # via notebook
+astunparse==1.6.3
+    # via tensorflow
 async-generator==1.10
     # via nbclient
 attrs==20.3.0
-    # via jsonschema
+    # via
+    #   jsonschema
+    #   tensorflow-datasets
 backcall==0.2.0
     # via ipython
 bleach==3.3.0
@@ -39,14 +49,39 @@ decorator==5.0.7
     # via ipython
 defusedxml==0.7.1
     # via nbconvert
+dill==0.3.3
+    # via tensorflow-datasets
 entrypoints==0.3
     # via nbconvert
+flatbuffers==1.12
+    # via tensorflow
+future==0.18.2
+    # via tensorflow-datasets
+gast==0.3.3
+    # via tensorflow
+google-auth-oauthlib==0.4.4
+    # via tensorboard
 google-auth==1.30.0
-    # via kubernetes
+    # via
+    #   google-auth-oauthlib
+    #   kubernetes
+    #   tensorboard
+google-pasta==0.2.0
+    # via tensorflow
+googleapis-common-protos==1.53.0
+    # via tensorflow-metadata
+grpcio==1.32.0
+    # via
+    #   tensorboard
+    #   tensorflow
+h5py==2.10.0
+    # via tensorflow
 idna==2.10
     # via
     #   pacswg
     #   requests
+importlib-resources==5.1.2
+    # via tensorflow-datasets
 ipykernel==5.5.3
     # via
     #   ipywidgets
@@ -105,10 +140,14 @@ jupyterlab-pygments==0.1.2
     # via nbconvert
 jupyterlab-widgets==1.0.0
     # via ipywidgets
+keras-preprocessing==1.1.2
+    # via tensorflow
 kiwisolver==1.3.1
     # via matplotlib
 kubernetes==12.0.1
     # via -r requirements.in
+markdown==3.3.4
+    # via tensorboard
 markupsafe==1.1.1
     # via jinja2
 matplotlib==3.4.1
@@ -135,18 +174,26 @@ notebook==6.3.0
     # via
     #   jupyter
     #   widgetsnbextension
-numpy==1.20.2
+numpy==1.19.5
     # via
     #   -r requirements.in
+    #   h5py
+    #   keras-preprocessing
     #   matplotlib
+    #   opt-einsum
     #   pacsltk
     #   pacswg
     #   pandas
     #   scikit-learn
     #   scipy
     #   seaborn
+    #   tensorboard
+    #   tensorflow
+    #   tensorflow-datasets
 oauthlib==3.1.0
     # via requests-oauthlib
+opt-einsum==3.3.0
+    # via tensorflow
 packaging==20.9
     # via bleach
 pacsltk==0.2.0
@@ -170,10 +217,19 @@ pillow==8.2.0
     # via matplotlib
 prometheus-client==0.10.1
     # via notebook
+promise==2.3
+    # via tensorflow-datasets
 prompt-toolkit==3.0.18
     # via
     #   ipython
     #   jupyter-console
+protobuf==3.15.8
+    # via
+    #   googleapis-common-protos
+    #   tensorboard
+    #   tensorflow
+    #   tensorflow-datasets
+    #   tensorflow-metadata
 ptyprocess==0.7.0
     # via
     #   pexpect
@@ -223,13 +279,17 @@ qtconsole==5.0.3
 qtpy==1.9.0
     # via qtconsole
 requests-oauthlib==1.3.0
-    # via kubernetes
+    # via
+    #   google-auth-oauthlib
+    #   kubernetes
 requests==2.25.1
     # via
     #   -r requirements.in
     #   kubernetes
     #   pacswg
     #   requests-oauthlib
+    #   tensorboard
+    #   tensorflow-datasets
 rsa==4.7.2
     # via google-auth
 s3transfer==0.4.2
@@ -247,15 +307,43 @@ send2trash==1.5.0
     # via notebook
 six==1.15.0
     # via
+    #   absl-py
     #   argon2-cffi
+    #   astunparse
     #   bleach
     #   cycler
     #   google-auth
+    #   google-pasta
+    #   grpcio
+    #   h5py
     #   jsonschema
+    #   keras-preprocessing
     #   kubernetes
     #   pacswg
+    #   promise
+    #   protobuf
     #   python-dateutil
+    #   tensorflow
+    #   tensorflow-datasets
     #   websocket-client
+tensorboard-data-server==0.6.0
+    # via tensorboard
+tensorboard-plugin-wit==1.8.0
+    # via tensorboard
+tensorboard==2.5.0
+    # via tensorflow
+tensorflow-datasets==4.2.0
+    # via -r requirements.in
+tensorflow-estimator==2.4.0
+    # via tensorflow
+tensorflow-metadata==0.30.0
+    # via tensorflow-datasets
+tensorflow==2.4.1
+    # via -r requirements.in
+termcolor==1.1.0
+    # via
+    #   tensorflow
+    #   tensorflow-datasets
 terminado==0.9.4
     # via notebook
 testpath==0.4.4
@@ -269,7 +357,9 @@ tornado==6.1
     #   notebook
     #   terminado
 tqdm==4.60.0
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   tensorflow-datasets
 traitlets==5.0.5
     # via
     #   ipykernel
@@ -282,6 +372,8 @@ traitlets==5.0.5
     #   nbformat
     #   notebook
     #   qtconsole
+typing-extensions==3.7.4.3
+    # via tensorflow
 urllib3==1.26.4
     # via
     #   botocore
@@ -294,8 +386,17 @@ webencodings==0.5.1
     # via bleach
 websocket-client==0.58.0
     # via kubernetes
+werkzeug==1.0.1
+    # via tensorboard
+wheel==0.36.2
+    # via
+    #   astunparse
+    #   tensorboard
+    #   tensorflow
 widgetsnbextension==3.5.1
     # via ipywidgets
+wrapt==1.12.1
+    # via tensorflow
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
