--- a/experiments/deployments/bentoml-onnx-resnet50-250m-512mb.json
+++ b/experiments/deployments/bentoml-onnx-resnet50-250m-512mb.json
@@ -3,7 +3,9 @@
   "image": "ghcr.io/nimamahmoudi/bentoml-onnx-resnet50:20210430002258",
   "env": {},
   "opts": {
-    "--limit": "'cpu=250m,memory=512Mi'"
+    "--limit": "'cpu=250m,memory=512Mi'",
+    "--request": "'cpu=250m,memory=512Mi'",
+    "--port": "5000"
   },
   "annotations": {
     "autoscaling.knative.dev/target": 1,
