--- a/proxy/package.json
+++ b/proxy/package.json
@@ -17,6 +17,7 @@
   "author": "Nima Mahmoudi",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-request-id": "^1.4.1",
